--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,8 @@
 
 .homepageIntro {
   margin: 40px 30px 120px 30px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .homepageHours {
