--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 .backgroundMenu {
-  background: url(../images/menu.jpg);
+  background: url(../images/menu1.jpg);
   min-height: 50vh;
   background-size: cover;
   background-repeat: no-repeat;
