--- a/css/index.css
+++ b/css/index.css
@@ -10,46 +10,93 @@
 
 .homepageIntro {
   margin: 40px 30px 120px 30px;
-  display: flex;
-  flex-direction: column;
+  position: relative;
+  text-align: center;
+}
+
+.homepageIntro h2 {
+  margin-top: 40px;
 }
 
 .homepageHours {
-  margin: 40px 30px 60px 30px;
+  text-align: center;
 }
 
-.hoursLine {
-  height: 2px;
-  border-radius: 2px;
-  background-color: #839895;
-  margin: 40px 0px;
+.link-facebook {
+  text-decoration: underline;
+  text-transform: none;
 }
 
-.homepageHours table {
-  font-size: 0.7em;
+.link-facebook:hover {
+  color: grey;
 }
 
-.homepageBigInfo {
-  margin: 0px 30px 30px 30px;
-}
-
-.homepageBigInfo img,
-.homepageSmallInfo img {
+.home-big-info img,
+.home-small-info img {
   width: 100%;
 }
 
-.homepageBigInfoContent {
-  position: relative;
-  margin-bottom: 100px;
+.home-big-info {
+  margin: 0px 30px 30px 30px;
 }
 
-.homepageSmallInfo {
-  margin: 135px 20px 100px 20px;
+.home-big-info-content h2 {
+  text-transform: none;
+  text-align: center;
+}
+
+.home-small-info h2 {
+  text-transform: none;
+  text-align: center;
+  margin-top: 120px;
+}
+
+.home-big-info-content {
+  background-color: #efefef;
+  padding-bottom: 100px;
+  box-shadow: 0px 5px 6px rgb(0 0 0 / 20%);
+  border-radius: 5px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  margin-bottom: 50px;
+}
+
+.home-big-info-content:hover,
+.home-small-info-content:hover {
+  transform: scale(1.02);
+}
+
+.home-small-info {
+  margin: 50px 20px 200px 20px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
 }
 
-.homepageSmallInfoContent {
-  position: relative;
+.home-small-info-content {
   margin: 10px;
+}
+
+.ctaHomeContainer {
+  position: relative;
+}
+
+.ctaHome {
+  background-color: #839895;
+  text-decoration: none;
+  color: white;
+  padding: 12px;
+  margin: 20px 0px;
+  border-radius: 2px;
+  border: 2px solid #839895;
+  width: 180px;
+  font-size: 0.9em;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+  box-shadow: 4px 4px 4px lightgrey;
+}
+
+.ctaHome:hover {
+  background-color: white;
+  color: #839895;
 }
