--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,4 @@
-.backgroundAbout {
+.background-about {
   background: url(../images/about.jpg);
   min-height: 50vh;
   background-size: cover;
@@ -8,6 +8,6 @@
   min-width: 100%;
 }
 
-.aboutContainer {
+.about-container {
   margin: 30px;
 }
