--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-.backgroundMenu {
+.background-menu {
   background: url(../images/menu1.jpg);
   min-height: 50vh;
   background-size: cover;
@@ -8,6 +8,6 @@
   min-width: 100%;
 }
 
-.menuContainer {
+.menu-container {
   margin: 30px;
 }
