--- a/css/shop.css
+++ b/css/shop.css
@@ -1,4 +1,4 @@
-.backgroundShop {
+.background-shop {
   background: url(../images/landhandel.jpg);
   min-height: 50vh;
   background-size: cover;
@@ -8,6 +8,6 @@
   min-width: 100%;
 }
 
-.shopContainer {
+.shop-container {
   margin: 30px;
 }
