--- a/css/catering.css
+++ b/css/catering.css
@@ -64,3 +64,62 @@
   font-size: 0.7em;
   margin: 11px 0px;
 }
+
+/* SLIDER */
+
+.container {
+  position: relative;
+  max-width: 900px;
+  margin: 50px auto;
+}
+
+.prev {
+  position: absolute;
+  z-index: 10;
+  font-size: 25px;
+  top: 40%;
+  left: 10px;
+  font-weight: 700;
+}
+
+.next {
+  right: 10px;
+  position: absolute;
+  font-size: 25px;
+  z-index: 10;
+  top: 40%;
+}
+
+.nav-btn {
+  background: rgba(255, 255, 255, 0.55);
+  cursor: pointer;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+}
+
+.nav-btn:hover {
+  background: white;
+}
+
+.carousel {
+  transition: all 0.3s ease;
+}
+
+.carousel img {
+  width: 100%;
+  transition: all 0.3s ease;
+}
+
+.carousel-image {
+  display: none;
+}
+
+.main {
+  display: block;
+}
