--- a/css/catering.css
+++ b/css/catering.css
@@ -65,9 +65,7 @@
   margin: 11px 0px;
 }
 
-/* SLIDER */
-
-.container {
+.carousel-container {
   position: relative;
   max-width: 900px;
   margin: 50px auto;
@@ -80,6 +78,7 @@
   top: 40%;
   left: 10px;
   font-weight: 700;
+  transition: 5s;
 }
 
 .next {
@@ -91,29 +90,27 @@
 }
 
 .nav-btn {
-  background: rgba(255, 255, 255, 0.55);
+  background-color: #d3ccbc;
   cursor: pointer;
-  border-radius: 50%;
+  border-radius: 5px;
   width: 30px;
-  height: 30px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 8px 8px 8px rgb(0 0 0 / 20%);
 }
 
 .nav-btn:hover {
-  background: white;
+  background-color: white;
+  transition: 0.5s;
 }
-
-.carousel {
-  transition: all 0.3s ease;
-}
-
-.carousel img {
+.carousel img,
+.single-picure {
   width: 100%;
-  transition: all 0.3s ease;
+  border-radius: 5px;
+  box-shadow: 0px 5px 6px rgb(0 0 0 / 20%);
 }
 
 .carousel-image {
