--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -101,6 +101,10 @@
     font-size: 1.1em;
   }
 
+  p {
+    font-size: 0.9em;
+  }
+
   .home-big-info-content {
     margin: 15px;
   }
@@ -147,7 +151,7 @@
   }
 
   p {
-    font-size: 0.8em;
+    font-size: 1em;
   }
 
   .nav-ul a {
