--- a/css/about.css
+++ b/css/about.css
@@ -11,3 +11,16 @@
 .about-container {
   margin: 30px;
 }
+
+.about-container a {
+  text-transform: none;
+  text-decoration: underline;
+}
+
+/* Set the size of the div element that contains the map */
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
