--- a/css/index.css
+++ b/css/index.css
@@ -84,7 +84,7 @@
   margin: 20px 0px;
   border-radius: 2px;
   border: 2px solid #839895;
-  width: 180px;
+  width: 50%;
   font-size: 0.9em;
   text-align: center;
   position: absolute;
