--- a/css/coffe.css
+++ b/css/coffe.css
@@ -5,6 +5,7 @@
 .coffe-container img {
   width: 100%;
   border-radius: 5px;
+  box-shadow: 0px 5px 6px rgb(0 0 0 / 20%);
 }
 
 .coffe-container ul {
