--- a/css/index.css
+++ b/css/index.css
@@ -80,19 +80,17 @@
   background-color: #839895;
   text-decoration: none;
   color: white;
-  padding: 12px;
+  padding: 12px 0px;
   margin: 20px 0px;
   border-radius: 2px;
-  border: 2px solid #839895;
-  width: 50%;
   font-size: 0.9em;
   text-align: center;
   position: absolute;
+  width: 100%;
   right: 0px;
   box-shadow: 4px 4px 4px lightgrey;
 }
 
 .home-cta:hover {
-  background-color: white;
-  color: #839895;
+  filter: brightness(0.85);
 }
